WIP
------------------

- EASY_MAPS_GOOGLE_MAPS_API_KEY deprecated in favor of historical
  EASY_MAPS_GOOGLE_KEY option.

0.9.4 (2019-03-28)
------------------

- Added support for django 2.x, dropped support for django < 1.11. It may
  still work with django 1.8, but this is no longer tested.
- Make sure GoogleV3 geocoder respect API key.

0.9.3 (2016-11-11)
------------------

- Google Maps API key configuration.
- Revert from setuptools back to distutils.
- Russian translation is added.

0.9.2 (2015-07-12)
------------------

- Replacing broken 0.9.1 release, back to setuptools.

0.9.1 (2015-07-02)
------------------

- Resolve the 500 error when google send a no results info.
- Resolving width / height and other variables in template.

0.9 (2014-02-11)
----------------

- Backwards incompatible: added support for geopy >= 0.96,
  dropped support for geopy < 0.96.
- Added support for django 1.6, dropped support for django 1.3. It may
  still work with django 1.3, but this is no longer tested.
- Experimental Python 3.3 support (no code changes - app seems to work as-is).

0.8.4 (2013-08-27)
------------------

- fix bad 0.8.3 release


0.8.3 (2013-08-27)
------------------

- ``easy_map`` tag now works when address is None.

0.8.2 (2013-07-02)
------------------

- Unique constraint is added to Address.address field (to prevent
  MultipleObjectsReturned exceptions).

  In order to upgrade, run

      python manage.py migrate easy_maps

- German translation is added.

0.8.1 (2013-03-25)
------------------

- Fix regressions in geocoding errors handling introduced in 0.8.

0.8 (2013-03-24)
----------------

- Testing improvements;
- EASY_MAPS_CENTER setting for default map coordinates;
- allow to pass an Address instance as argument of easy_map tag;
- better error handling;
- switch to GoogleV3 geocoder;
- customization hook: it is now possible to use a custom geocoding method;
- EASY_MAPS_GOOGLE_KEY now does nothing (it is not a meaningful option